fix: Add pre-wrap to Text component so that elements with \n wrap

--- a/src/Text/Text.module.styl
+++ b/src/Text/Text.module.styl
@@ -4,6 +4,7 @@
 	margin 0
 	font-size rem(16)
 	font-weight normal
+	white-space pre-wrap
 
 	+ .text
 		margin-top 8px
